# financials

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  TASKS.md  docker-compose.yml  flake.nix  litestream-sidecar.sh  litestream.yml
.data.db-litestream/ltx/0/: 0000000000000001-0000000000000001.ltx  0000000000000002-0000000000000002.ltx
.github/workflows/: rust.yml
migrations/: 0001_init.sql  0002_financials.sql  0003_add_position.sql  0003_features.sql  0004_reconcile.sql  0004_user_and_softdelete.sql  0005_backup_config.sql  0005_budget_user_unique.sql  0006_b2_endpoint.sql  0006_portfolio_user_and_softdelete.sql  0007_backup_no_user.sql  0008_db_instance_id.sql  0009_backup_interval.sql  0010_backup_max_snapshots.sql  0011_add_ignored_column.sql  0012_add_metadata.sql  0012_csv_uploads.sql
src/: auth.rs  cookies.rs  error.rs  flash.rs  layout.rs  lib.rs  main.rs  pages.rs  pages_features.rs  seed.rs  utils.rs
src/models/: backup.rs  csv_import.rs  features.rs  mod.rs  portfolio.rs  reconcile.rs  user.rs
src/static/: chart.min.js  style.css
tests/: backup.rs  integration.rs  portfolio_import.rs  reconcile.rs  user.rs
